[gd_scene load_steps=3 format=3 uid="uid://cnk0f3erfv27m"]

[ext_resource type="Script" uid="uid://dsfqtatjmo85x" path="res://addons/Ds_levels/ui/popups/remove_level_popup.gd" id="1_1n31k"]

[sub_resource type="LabelSettings" id="LabelSettings_1n31k"]
font_size = 12
font_color = Color(1, 1, 1, 0.658824)

[node name="remove_level_popup" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 547.0
offset_bottom = 117.0
alignment = 1
script = ExtResource("1_1n31k")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Are you shure you want to remove level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_name_label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Remove level"
label_settings = SubResource("LabelSettings_1n31k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 82
alignment = 1

[node name="cancel_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ok_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ok_button" to="." method="_on_ok_button_pressed"]
